# hyperion-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  ApexEngineV2.sln  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  GlobalConfigTemplate.json  LICENSE  README.md  build.bat  build.sh  compile_shaders.sh  compile_shaders_vk11.sh  compile_shaders_vk12.sh  config.json  containers.natvis  foo.bar.txt  generate_projects.bat  generate_projects.sh  imgui.ini  launch-template.json  script_example.hyp  setup.sh  tasks-template.json  test_dump.fbom
buildtool/: CMakeLists.txt
buildtool/src/: HypBuildTool.cpp
buildtool/src/analyzer/: Analyzer.cpp  Analyzer.hpp  AnalyzerError.hpp  Definitions.hpp  Module.cpp  Module.hpp
buildtool/src/driver/: Driver.hpp
buildtool/src/generator/: Generator.cpp  Generator.hpp
buildtool/src/parser/: CompilationUnit.cpp  CompilationUnit.hpp  CompilerError.cpp  CompilerError.hpp  ErrorList.cpp  ErrorList.hpp  Lexer.cpp  Lexer.hpp  Operator.cpp  Operator.hpp  Parser.cpp  Parser.hpp  SourceFile.cpp  SourceFile.hpp  SourceLocation.cpp  SourceLocation.hpp  SourceStream.cpp  SourceStream.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp
buildtool/src/templates/: Templates.cpp  Templates.hpp
buildtool/src/util/: ParseUtil.cpp  ParseUtil.hpp
editor/: CMakeLists.txt  Editor.cpp
editor/src/: main.cpp
editor/src/editor/: EditorDelegates.cpp
modules/font/: CMakeLists.txt  Face.cpp  Face.hpp  Font.hpp  FontEngine.cpp  FontEngine.hpp  Glyph.cpp  Glyph.hpp
samples/: CMakeLists.txt  SampleStreamer.cpp  SampleStreamer.hpp  main.cpp
samples/csharp/: Class1.cs  csharp.csproj
samples/sample_streamer/: Dockerfile  SampleStreamer.cpp  SampleStreamer.hpp  build_docker_image.sh  main.cpp
src/core/: Base.cpp  Base.hpp  CMakeLists.txt  Class.cpp  Class.hpp  ClassInfo.cpp  ClassInfo.hpp  Constants.hpp  Containers.hpp  Core.cpp  Core.hpp  DataMutationState.hpp  Defines.hpp  Handle.cpp  Handle.hpp  HandleID.hpp  HashCode.hpp  HypClass.cpp  HypClass.hpp  HypClassProperty.cpp  HypClassProperty.hpp  HypClassPropertySerializer.cpp  HypClassPropertySerializer.hpp  HypClassRegistry.cpp  HypClassRegistry.hpp  HypClassUtils.hpp  HypObject.cpp  HypObject.hpp  ID.cpp  ID.hpp  IDCreator.hpp  IDGenerator.hpp  Memory.hpp  Name.cpp  Name.hpp  NameInternal.hpp  ObjectPool.cpp  ObjectPool.hpp  Observer.hpp  OpaqueHandle.hpp  (+16 more)
src/core/algorithm/: AnyOf.hpp  Every.hpp  Filter.hpp  Find.hpp  FindIf.hpp  Map.hpp  Sum.hpp
src/core/cli/: CommandLine.cpp  CommandLine.hpp
src/core/compression/: Archive.cpp  Archive.hpp
src/core/config/: Config.cpp  Config.hpp
src/core/containers/: Array.hpp  ArrayMap.hpp  Bitset.cpp  Bitset.hpp  ContainerBase.hpp  FixedArray.hpp  FlatMap.hpp  FlatSet.hpp  Forest.hpp  HashMap.hpp  HashSet.hpp  HeapArray.hpp  LinkedList.hpp  Queue.hpp  SortedArray.hpp  SparsePagedArray.hpp  Stack.hpp  StaticArray.hpp  StaticMap.hpp  StaticString.hpp  String.hpp  StringFwd.hpp  ThreadSafeContainer.hpp  TypeMap.hpp
src/core/debug/: Debug.cpp  Debug.hpp  StackDump.cpp  StackDump.hpp
src/core/dll/: DynamicLibrary.cpp  DynamicLibrary.hpp
src/core/ecs/: ComponentRegistry.hpp  component_registry.h
src/core/filesystem/: DataStore.cpp  DataStore.hpp  FilePath.cpp  FilePath.hpp  FsUtil.cpp  FsUtil.hpp
src/core/functional/: Delegate.cpp  Delegate.hpp  FunctionWrapper.hpp  Proc.hpp  ScriptableDelegate.cpp  ScriptableDelegate.hpp  ScriptableDelegateFwd.hpp
src/core/inl/: HandleDefinitions.inl
src/core/io/: BufferedByteReader.hpp  ByteReader.hpp  ByteWriter.hpp
src/core/json/: JSON.cpp  JSON.hpp
src/core/lib/: Any.cpp  Any.hpp  ArrayMap.hpp  AtomicLock.hpp  AtomicSemaphore.hpp  AtomicVar.hpp  Bitset.cpp  Bitset.hpp  ByteBuffer.hpp  CMemory.hpp  ComponentSet.hpp  ContainerBase.hpp  Delegate.cpp  Delegate.hpp  DynArray.hpp  FixedArray.hpp  FixedString.hpp  FlatMap.hpp  FlatSet.hpp  HashMap.hpp  HeapArray.hpp  LinkedList.hpp  Memory.hpp  Mutex.hpp  Optional.hpp  Pair.hpp  Path.hpp  Proc.hpp  Queue.hpp  Range.hpp  RefCountedPtr.hpp  SmallVector.hpp  SortedArray.hpp  Span.hpp  SparseFlatMap.hpp  Stack.hpp  StaticMap.hpp  StaticString.hpp  String.hpp  StringView.hpp  (+25 more)
src/core/logging/: LogChannels.cpp  LogChannels.hpp  Logger.cpp  Logger.hpp  LoggerFwd.hpp
src/core/math/: BlendVar.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingSphere.cpp  BoundingSphere.hpp  Color.cpp  Color.hpp  Extent.hpp  Frustum.cpp  Frustum.hpp  Halton.hpp  MathUtil.cpp  MathUtil.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Ray.cpp  Ray.hpp  Rect.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  Vertex.cpp  Vertex.hpp
src/core/memory/: Any.hpp  AnyRef.cpp  AnyRef.hpp  ByteBuffer.hpp  Memory.hpp  MemoryPool.cpp  MemoryPool.hpp  NotNullPtr.hpp  Pimpl.hpp  RefCountedPtr.hpp  UniquePtr.hpp
src/core/net/: HTTPRequest.cpp  HTTPRequest.hpp  MessageQueue.hpp  NetRequestThread.cpp  NetRequestThread.hpp  Socket.cpp  Socket.hpp  WebSocket.cpp  WebSocket.hpp
src/core/object/: Handle.cpp  Handle.hpp  HypClass.cpp  HypClass.hpp  HypClassAttribute.cpp  HypClassAttribute.hpp  HypClassRegistry.cpp  HypClassRegistry.hpp  HypClassUtils.cpp  HypClassUtils.hpp  HypConstant.hpp  HypData.cpp  HypData.hpp  HypDataJSONHelpers.cpp  HypDataJSONHelpers.hpp  HypEnum.cpp  HypEnum.hpp  HypField.hpp  HypMember.hpp  HypMemberFwd.hpp  HypMethod.hpp  HypObject.cpp  HypObject.hpp  HypObjectBase.hpp  HypObjectEnums.hpp  HypObjectFwd.hpp  HypObjectPool.cpp  HypObjectPool.hpp  HypProperty.cpp  HypProperty.hpp  HypStruct.cpp  (+7 more)
src/script/: Builtins.cpp  Builtins.hpp  CMakeLists.txt  Hasher.hpp  HypScript.cpp  HypScript.hpp  Instructions.hpp  Script.cpp  Script.hpp  ScriptApi.cpp  ScriptApi.hpp  ScriptApi2.cpp  ScriptApi2.hpp  ScriptBindingDef.generated.hpp  ScriptBindingDef.hpp  ScriptBindings.cpp  ScriptBindings.hpp  SourceFile.cpp  SourceFile.hpp  SourceLocation.cpp  SourceLocation.hpp  SourceStream.cpp  SourceStream.hpp  Tribool.hpp  Typedefs.hpp
(+5556 files in other folders)
